# mcproc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.ja.md  README.md  SECURITY.md  Taskfile.yml  deny.toml
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-homebrew.yml  release.yml  verify-homebrew.yml
docs/: Architecture.md
mcp-rs/: Cargo.toml  README.md
mcp-rs/examples/: simple_tool.rs  sse_server.rs
mcp-rs/src/: error.rs  lib.rs  notification.rs  protocol.rs  server.rs  types.rs
mcp-rs/src/transport/: http.rs  mod.rs  sse.rs  stdio.rs  streamable_http.rs
mcproc/: CONFIG_USAGE_REPORT.md  Cargo.toml
mcproc/src/: lib.rs  main.rs  test_support.rs  utils.rs
mcproc/src/cli/: mod.rs  utils.rs
mcproc/src/cli/commands/: clean.rs  daemon.rs  grep.rs  logs.rs  mcp.rs  mod.rs  ps.rs  restart.rs  start.rs  stop.rs  version.rs
mcproc/src/cli/commands/mcp/: mod.rs  test_support.rs  tests.rs
mcproc/src/cli/commands/mcp/tools/: grep.rs  logs.rs  mod.rs  ps.rs  restart.rs  start.rs  status.rs  stop.rs
mcproc/src/client/: mod.rs
mcproc/src/commands/: daemon.rs  logs.rs  mcp.rs  mod.rs  ps.rs  restart.rs  start.rs  stop.rs
mcproc/src/common/: exit_code.rs  mod.rs  paths.rs  process_key.rs  status.rs  timestamp.rs  validation.rs  version.rs  xdg.rs
mcproc/src/common/config/: mod.rs
mcproc/src/daemon/: error.rs  mod.rs
mcproc/src/daemon/api/: grpc.rs
mcproc/src/daemon/api/grpc/: helpers.rs  impl_trait.rs  log_handlers.rs  mod.rs  process_handlers.rs  server.rs  service.rs  test_support.rs
mcproc/src/daemon/config/: mod.rs
mcproc/src/daemon/log/: batch_writer.rs  cleaner.rs  mod.rs
mcproc/src/daemon/process/: event.rs  exit_handler.rs  hyperlog.rs  launcher.rs  log_stream.rs  manager.rs  mod.rs  port_detector.rs  proxy.rs  registry.rs  toolchain.rs  types.rs
mcproc/src/daemon/stream/: mod.rs
mcproc/tests/: daemon_shutdown_test.rs  logs_follow_test.rs  process_group_test.rs  process_stop_test.rs
mcprocd/: Cargo.toml
mcprocd/src/: error.rs  lib.rs  main.rs
mcprocd/src/api/: grpc.rs
mcprocd/src/config/: mod.rs
mcprocd/src/log/: mod.rs
mcprocd/src/process/: manager.rs  mod.rs  proxy.rs
proto/: Cargo.toml  build.rs
proto/proto/: mcproc.proto
proto/src/: lib.rs
