[workspace]
members = ["mcp-rs", "mcproc", "proto"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atsuhito Machida <neptacox@gmail.com>"]
license = "MIT"
repository = "https://github.com/neptaco/mcproc"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# JSON-RPC for MCP
jsonrpc-v2 = "0.13"

# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.13"

# HTTP/WebSocket (only used by mcprocd, not mcp-rs)
axum = { version = "0.8", features = ["ws", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-tungstenite = "0.26"

# Process management
dashmap = "6.1"
regex = "1.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
flexi_logger = { version = "0.31", features = ["async", "compress"] }

# Ring buffer
ringbuf = "0.4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Path handling
dirs = "6.0"

# Testing
mockall = "0.13"

# Additional dependencies
tokio-stream = "0.1"
log = "0.4"
libc = "0.2"
