[package]
name = "mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["mcproc contributors"]
license = "MIT OR Apache-2.0"
description = "Model Context Protocol (MCP) implementation for Rust"
repository = "https://github.com/crysta/mcproc"

[dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# HTTP/SSE support
warp = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = "0.3"
bytes = "1.9"

# Logging
tracing = "0.1"

# UUID for request IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
default = ["http", "stdio"]
http = ["dep:warp", "dep:tokio-tungstenite"]
stdio = []
full = ["http", "stdio"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
chrono = "0.4"