[package]
name = "mcp-rs"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors = ["mcproc contributors"]
license = "MIT OR Apache-2.0"
description = "Model Context Protocol (MCP) implementation for Rust"
repository = "https://github.com/crysta/mcproc"

[dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# Future HTTP/SSE support
futures-util = "0.3"
bytes = "1.11"
http = "1.2"

# Logging
tracing = "0.1"

# UUID for request IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
default = ["stdio"]
stdio = []
sse = []
streamable-http = []
full = ["stdio", "sse", "streamable-http"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
chrono = "0.4"

# cargo-machete reports false positives for these dependencies
# which are used through re-exports or feature flags
[package.metadata.cargo-machete]
ignored = [
    "anyhow",       # Re-exported for tool implementations
    "bytes",        # Used for HTTP body types
    "futures-util", # Used for stream utilities
    "http",         # Used for HTTP types
    "tokio-stream", # Used for async stream utilities
    "uuid",         # Used for request ID generation
]