[package]
name = "mcproc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mcproc"
path = "src/lib.rs"

[[bin]]
name = "mcproc"
path = "src/main.rs"

[dependencies]
# From mcprocd
proto = { path = "../proto" }
mcp-rs = { path = "../mcp-rs" }

# Async runtime
tokio.workspace = true

# gRPC
tonic.workspace = true
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Process management
dashmap.workspace = true
regex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
flexi_logger.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async trait
async-trait.workspace = true

# UUID
uuid.workspace = true

# Date/time
chrono.workspace = true


# Path handling
dirs.workspace = true

# HTTP/WebSocket (for MCP server)
axum.workspace = true
axum-extra.workspace = true
tokio-tungstenite.workspace = true

# JSON-RPC (for MCP)
jsonrpc-v2.workspace = true

# Additional dependencies
tokio-stream.workspace = true
log.workspace = true
colored = "2.2"
tabled = "0.18"
async-stream = "0.3"
prost-types.workspace = true
strip-ansi-escapes = "0.2.1"
crossbeam-channel.workspace = true
bytes.workspace = true

# Process info
sysinfo = "0.32"

# File locking
fs2 = "0.4"

# Platform specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }
libc = "0.2"

[dev-dependencies]
serial_test = "3.2"

# cargo-machete reports false positives for these dependencies
# which are used through re-exports or feature flags
[package.metadata.cargo-machete]
ignored = [
    "anyhow",         # Used through mcp-rs re-exports
    "axum",           # Planned for future HTTP transport
    "axum-extra",     # Planned for future HTTP transport
    "crossbeam-channel", # Used for internal messaging
    "flexi_logger",   # Used in daemon logging setup
    "jsonrpc-v2",     # Used for MCP JSON-RPC handling
    "tokio-tungstenite", # Planned for future WebSocket transport
]
