[package]
name = "mcprocd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

# Process & state management
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ringbuf = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# System
dirs = { workspace = true }
nix = { version = "0.30", features = ["process", "signal"] }

# Proto
proto = { path = "../proto" }

# Additional dependencies
tokio-stream = { workspace = true }
log = { workspace = true }
prost-types = "0.13"
async-stream = "0.3"



[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.15"

[[bin]]
name = "mcprocd"
path = "src/main.rs"