[package]
name = "proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.14"
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

# cargo-machete reports false positives for these dependencies
# which are used through derive macros or generated code
[package.metadata.cargo-machete]
ignored = [
    "prost",       # Used by generated protobuf code
    "prost-types", # Used by generated protobuf code
    "serde",       # Used via derive macro in generated protobuf code
    "tonic",       # Used by generated gRPC code
]